adds fallbacks fonts to GitHub

--- a/src/Clients/StyleLibrary/less/fontImports.less
+++ b/src/Clients/StyleLibrary/less/fontImports.less
@@ -67,3 +67,59 @@ body{
 .largeFontSize{
     font-size: @largeFontSize;
 }
+
+@font-face {
+    font-family: 'wf_segoe-ui_light';
+    src: ~"local('Segoe UI Light'),local('Segoe WP Light'),local('helvetica'),local('arial'),local('sans-serif')";
+    font-weight: normal;
+    font-style: normal
+}
+
+@font-face {
+    font-family: 'wf_segoe-ui_semilight';
+    src: ~"local('Segoe UI Semilight'),local('Segoe WP Light'),local('helvetica'),local('arial'),local('sans-serif')";
+    font-weight: normal;
+    font-style: normal
+}
+
+@font-face {
+    font-family: 'wf_segoe-ui_normal';
+    src: ~"local('Segoe UI'),local('Segoe'),local('Segoe WP'),local('helvetica'),local('arial'),local('sans-serif')";
+    font-weight: normal;
+    font-style: normal
+}
+
+@font-face {
+    font-family: 'wf_segoe-ui_semibold';
+    src: ~"local('Segoe UI Semibold'),local('Segoe Semibold'),local('Segoe WP Semibold'),local('helvetica'),local('arial'),local('sans-serif')";
+    font-weight: normal;
+    font-style: normal
+}
+
+@font-face {
+    font-family: 'wf_segoe-ui_bold';
+    src: ~"local('Segoe UI bold'),local('Segoe bold'),local('Segoe WP bold'),local('helvetica'),local('arial'),local('sans-serif')";
+    font-weight: normal;
+    font-style: normal
+}
+
+@font-face {
+    font-family: 'wf_standard-font';
+    src: ~"local('helvetica'),local('arial'),local('sans-serif')";
+    font-weight: normal;
+    font-style: normal
+}
+
+@font-face {
+    font-family: 'wf_standard-font_bold';
+    src: ~"local('helvetica'),local('arial'),local('sans-serif')";
+    font-weight: normal;
+    font-style: normal
+}
+
+@font-face {
+    font-family: 'wf_standard-font_light';
+    src: ~"local('helvetica'),local('arial'),local('sans-serif')";
+    font-weight: normal;
+    font-style: normal
+}
